development environment improvements

--- a/.github/workflows/pkgbuild.yml
+++ b/.github/workflows/pkgbuild.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           name: built-rpms
           path: |
-            dist/**/*.rpm
+            dist/rpm/*/*.rpm
           if-no-files-found: error
           retention-days: 5
 
