--- a/tox.ini
+++ b/tox.ini
@@ -7,13 +7,12 @@ use_discover = False
 [tox]
 envlist =
     clean
+    validate
     i18n
     compile
     minimal
-    build
     release
-    validate
-    twine-check
+
 minversion = 4.0
 requires = virtualenv>=20.0.0
 isolated_build = True
@@ -27,13 +26,54 @@ ensurepip = true
 setenv =
     COVERAGE_RCFILE = {toxinidir}/pyproject.toml
 
-[testenv:build-rpm]
-description = Run RPM packaging via Docker
+[testenv:build-src-rpm]
+description = Build source RPM and place .src.rpm in dist/
+skip_install = true
+allowlist_externals =
+    bash
+    cp
+    mkdir
+    find
+    rpmbuild
+setenv =
+    HOME = {envtmpdir}
+    RPMTOP = {envtmpdir}/rpmbuild
+commands_pre =
+    mkdir -p {envtmpdir}/rpmbuild/SOURCES
+    mkdir -p {envtmpdir}/rpmbuild/SPECS
+    mkdir -p dist/rpm
+    cp packaging/man/apprise.1 {envtmpdir}/rpmbuild/SOURCES/
+    cp packaging/redhat/python-apprise.spec {envtmpdir}/rpmbuild/SPECS/
+    find packaging/redhat/ -iname '*.patch' -exec cp {} {envtmpdir}/rpmbuild/SOURCES/ \;
+    bash -c 'cp dist/*.tar.gz {envtmpdir}/rpmbuild/SOURCES/'
+    bash -c 'echo "%_topdir {envtmpdir}/rpmbuild" > {envtmpdir}/.rpmmacros'
+commands =
+    rpmbuild --nodeps -bs {envtmpdir}/rpmbuild/SPECS/python-apprise.spec
+    find {envtmpdir}/rpmbuild/SRPMS -name '*.src.rpm' -exec mv {} dist/rpm \;
+
+[testenv:build-el9-rpm]
+description = Run RPM packaging for EPEL9 via Docker
+skip_install = true
 allowlist_externals =
     docker
-    bash
 commands =
-    docker compose run --user root --rm rpmbuild.el9 bash build-rpm.sh
+    docker compose run --rm rpmbuild.el9 bash /usr/bin/build-rpm.sh
+
+[testenv:build-f42-rpm]
+description = Run RPM packaging for Fedora 42 via Docker
+skip_install = true
+allowlist_externals =
+    docker
+commands =
+    docker compose run --rm rpmbuild.f42 bash /usr/bin/build-rpm.sh
+
+[testenv:build-rawhide-rpm]
+description = Run RPM packaging for Fedora Rawhide via Docker
+skip_install = true
+allowlist_externals =
+    docker
+commands =
+    docker compose run --rm rpmbuild.rawhide bash /usr/bin/build-rpm.sh
 
 [testenv:lint]
 description = Run static analysis using Ruff
@@ -104,8 +144,10 @@ commands =
     find . -type f -name "*.pyc" -delete
     find . -type f -name "*.pyo" -delete
     find . -type f -name "*.orig" -delete
+    find . -type f -name "*.orig" -delete
+    find ./apprise/i18n -type f -name "*.mo" -delete
+    rm -rf BUILD SOURCES SRPMS BUILDROOT .cache .ruff_cache .coverage-reports .coverage coverage.xml dist build apprise.egg-info .mypy_cache .pytest_cache  "__pycache__"
     find . -type d -name "__pycache__" -delete
-    rm -rf BUILD SOURCES SRPMS BUILDROOT .cache .ruff_cache .coverage-reports .coverage coverage.xml dist build apprise.egg-info .mypy_cache .pytest_cache
 
 [testenv:i18n]
 description = Extract and update .pot/.po files for translation
@@ -115,13 +157,13 @@ ensurepip = true
 commands =
     mkdir -p apprise/i18n
     pybabel extract -F babel.cfg -o apprise/i18n/apprise.pot apprise
-    pybabel update -i apprise/i18n/apprise.pot -d apprise/i18n
+    pybabel update --domain=apprise -i apprise/i18n/apprise.pot -d apprise/i18n
 
 [testenv:compile]
 description = Compile .mo files
 deps = Babel
 commands =
-    pybabel compile -d apprise/i18n
+    pybabel compile --domain=apprise -d apprise/i18n
 
 [testenv:build]
 description = Build sdist and wheel (assumes translations compiled)
@@ -151,11 +193,8 @@ commands =
 [testenv:twine-check]
 description = Run twine check on dist artifacts
 deps =
-	build
 	twine
 commands =
-    rm -rf dist
-    python -m build
     twine check dist/*
 
 [testenv:man]
