--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,17 @@
 {
-    "python.testing.pytestArgs": [],
-    "python.testing.cwd": "${workspaceFolder}",
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "terminal.integrated.env.linux": {
-      "PYTHONPATH": "${workspaceFolder}"
-    }
+  "python.testing.pytestArgs": [
+    "tests"
+  ],
+  "python.linting.enabled": true,
+  "python.linting.ruffEnabled": true,
+  "python.linting.ruffPath": "ruff",
+  "python.formatting.provider": "none",
+  "editor.formatOnSave": true,
+  "python.testing.cwd": "${workspaceFolder}",
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true,
+  "python.envFile": "${workspaceFolder}/.env",
+  "terminal.integrated.env.linux": {
+    "PYTHONPATH": "${workspaceFolder}"
+  }
 }
