--- a/tox.ini
+++ b/tox.ini
@@ -116,16 +116,20 @@ description = Full tests with all plugins + code coverage
 extras = dev,all-plugins
 commands =
     pip install --no-cache-dir -e ".[dev,all-plugins]"
+    coverage erase
     coverage run --source=apprise -m pytest tests {posargs}
-    coverage report
+    coverage report -m
+    coverage xml -o coverage.xml
 
 [testenv:minimal]
 description = Minimal dependencies + code coverage
 extras = dev
 commands =
     pip install --no-cache-dir -e ".[dev]"
+    coverage erase
     coverage run --source=apprise -m pytest tests {posargs}
-    coverage report
+    coverage report -m
+    coverage xml -o coverage.xml
 
 [testenv:test]
 description = Run simplified tests without coverage
