--- a/.codecov.yml
+++ b/.codecov.yml
@@ -2,10 +2,9 @@ codecov:
   require_ci_to_pass: false
 
 comment:
-  layout: "reach,diff,flags,files"
-  require_changes: false
-  behavior: update
-  after_n_builds: 1
+  layout: "diff, flags, files"
+  behavior: default
+  require_changes: false  # if true: only post the comment if coverage changes
 
 coverage:
   status:
