--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ keywords = [
     "Nextcloud",
     "NextcloudTalk",
     "Notica",
+    "NoticationAPI",
     "Notifiarr",
     "Notifico",
     "Ntfy",
