--- a/tox.ini
+++ b/tox.ini
@@ -196,10 +196,9 @@ commands =
 
 [testenv:twine-check]
 description = Run twine check on dist artifacts
-deps =
-	twine
+deps = twine
 commands =
-    twine check dist/*
+    python -m twine check dist/*.whl dist/*.tar.gz
 
 [testenv:man]
 description = Rebuild the Apprise man page
@@ -222,5 +221,7 @@ commands =
     tox -e validate
     tox -e i18n
     tox -e compile
+    tox -e man
     tox -e build
+    tox -e build-src-rpm
     tox -e twine-check
