Copilot suggestion fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,7 @@ keywords = [
     "Nextcloud",
     "NextcloudTalk",
     "Notica",
-    "NoticationAPI",
+    "NotificationAPI",
     "Notifiarr",
     "Notifico",
     "Ntfy",
