--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ keywords = [
     "DBus",
     "DingTalk",
     "Discord",
+    "Dot",
     "Email",
     "Emby",
     "Enigma2",
@@ -134,6 +135,7 @@ keywords = [
     "PushSafer",
     "Pushy",
     "QQ Push",
+    "Quote/0",
     "Reddit",
     "Resend",
     "Revolt",
