--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,15 @@ skip_install = true
 allowlist_externals =
     docker
 commands =
-    docker compose run --rm rpmbuild.el9 bash /usr/bin/build-rpm.sh
+    docker compose run --rm rpmbuild.el9 bash /apprise/bin/build-rpm.sh
+
+[testenv:build-el10-rpm]
+description = Run RPM packaging for EPEL10 via Docker
+skip_install = true
+allowlist_externals =
+    docker
+commands =
+    docker compose run --rm rpmbuild.el10 bash /apprise/bin/build-rpm.sh
 
 [testenv:build-f42-rpm]
 description = Run RPM packaging for Fedora 42 via Docker
@@ -65,7 +73,7 @@ skip_install = true
 allowlist_externals =
     docker
 commands =
-    docker compose run --rm rpmbuild.f42 bash /usr/bin/build-rpm.sh
+    docker compose run --rm rpmbuild.f42 bash /apprise/bin/build-rpm.sh
 
 [testenv:build-rawhide-rpm]
 description = Run RPM packaging for Fedora Rawhide via Docker
@@ -73,7 +81,7 @@ skip_install = true
 allowlist_externals =
     docker
 commands =
-    docker compose run --rm rpmbuild.rawhide bash /usr/bin/build-rpm.sh
+    docker compose run --rm rpmbuild.rawhide bash /apprise/bin/build-rpm.sh
 
 [testenv:lint]
 description = Run static analysis using Ruff
@@ -204,7 +212,7 @@ commands =
 description = Rebuild the Apprise man page
 allowlist_externals = docker
 commands =
-    docker compose run --rm rpmbuild.el9 ronn \
+    docker compose run --rm rpmbuild.el10 ronn \
       --organization="Chris Caron <lead2gold@gmail.com>" \
       packaging/man/apprise.md
 
