--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,6 +111,7 @@ keywords = [
     "Nextcloud",
     "NextcloudTalk",
     "Notica",
+    "NotificationAPI",
     "Notifiarr",
     "Notifico",
     "Ntfy",
