https://appriseit.com documentation introduction

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -231,10 +231,10 @@ windows = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/caronc/apprise"
+Homepage = "https://apriseit.com"
 Source = "https://github.com/caronc/apprise"
 Tracker = "https://github.com/caronc/apprise/issues"
-Documentation = "https://github.com/caronc/apprise/wiki"
+Documentation = "https://appriseit.com"
 
 [project.scripts]
 apprise = "apprise.cli:main"
