--- a/.github/workflows/loc-badge.yml
+++ b/.github/workflows/loc-badge.yml
@@ -2,16 +2,12 @@
 name: LoC Badge
 
 on:
+  # Manual only
   workflow_dispatch:
-  push:
-    branches:
-      - master
-  schedule:
-    # Weekly refresh (GitHub image cache plus badge freshness)
-    - cron: "0 3 * * 1"
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   loc-badge:
@@ -20,25 +16,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Generate LoC badge (Python Files Only)
+      - name: Generate LoC badge (Apprise library only)
         uses: alexispurslane/GHA-LoC-Badge@v2.0.0
 
-        id: badge
         with:
           debug: false
           directory: ./apprise
           badge: ./output/loc.svg
-          # cloc patterns; pipe-separated like a .gitignore file
-          patterns: "*.py"
-          ignore: "i18n|assets|__pycache__|.github|.tox|.venv|venv|build|dist"
-      - name: Install badge artefact
+          patterns: "**/*.py"
+          ignore: "__pycache__"
+
+      - name: Install badge artifact
         run: |
           mkdir -p .github/badges
           mv -f ./output/loc.svg .github/badges/loc.svg
 
-      - name: Commit badge (if changed)
-        uses: EndBug/add-and-commit@v9
+      - name: Create PR (if changed)
+        uses: peter-evans/create-pull-request@v7
         with:
-          add: ".github/badges/loc.svg"
-          message: "Update LoC badge"
-          default_author: github_actions
+          commit-message: "Update Lines of Code (LoC) badge"
+          title: "Update LoC badge"
+          body: "Automated update of the Lines of Code badge."
+          branch: "automation/loc-badge"
+          delete-branch: true
+          add-paths: ".github/badges/loc.svg"
+
