fixes rpm building

--- a/tox.ini
+++ b/tox.ini
@@ -161,6 +161,7 @@ commands =
     find . -type d -name "__pycache__" -delete
 
 [testenv:i18n]
+platform = linux|darwin
 description = Extract and update .pot/.po files for translation
 extras = dev
 deps = Babel
@@ -169,6 +170,7 @@ commands =
     mkdir -p apprise/i18n
     pybabel extract -F babel.cfg -o apprise/i18n/apprise.pot apprise
     pybabel update --domain=apprise -i apprise/i18n/apprise.pot -d apprise/i18n
+    sh packaging/i18n_normalize.sh
 
 [testenv:compile]
 description = Compile .mo files
