XMPP support restored using Slixmpp

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -226,6 +226,9 @@ all-plugins = [
 
     # Provides smpp:// support
     "smpplib",
+
+    # For xmpp:// support
+    "slixmpp",
 ]
 windows = [
     "pywin32",
@@ -396,4 +399,3 @@ exclude_lines = [
 [tool.coverage.xml]
 # Ensure GitHub Action can find a predictable file
 output = "coverage.xml"
-
