--- a/tox.ini
+++ b/tox.ini
@@ -102,6 +102,7 @@ apprise = "apprise.cli:main"
 
 [testenv:apprise]
 description = Run Apprise CLI with args
+extras = all-plugins
 commands =
     apprise {posargs}
 
