Fixed RUF069 Unreliable floating point equality comparison

--- a/tox.ini
+++ b/tox.ini
@@ -85,12 +85,12 @@ commands =
 
 [testenv:lint]
 description = Run static analysis using Ruff
-deps = ruff
+deps = ruff>=0.14.11
 commands = ruff check . {posargs}
 
 [testenv:format]
 description = Auto-format code using Ruff
-deps = ruff
+deps = ruff>=0.14.11
 commands = ruff check . --fix {posargs}
 
 # - This defines a CLI script entry point for packaging.
