--- a/pyproject.toml
+++ b/pyproject.toml
@@ -343,7 +343,7 @@ ignore = [
   # The following needs to be supported at some point and is of great value
   "RUF012",  # typing.ClassVar implimentation
   "RUF029",  # Use of async without await or async subcalls
-  "RUF067",  # Classes can only have docstrigs and re-export only
+  "RUF067",  # Classes can only have docstrings and re-export only
   "UP032",   # This is a massive undertaking and requires a massive rewrite
              # of test cases; this will take a while to fix, so turning off
              # for now
